5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1674_1872.log
== TEST (2019-04-30 10:28:50) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo x")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0)
	   print("Q1")
-- ERROR:
File "XXXX", line 18
    elif(y>0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:28:51) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo x")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0)
	   print("Q1")
-- EXECUTION TIME:
0.164593
-- ERROR:
  File "/home/codebench/codes/1674/1872/main.py", line 18
    elif(y>0)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:28:53) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo x")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0)
	   print("Q1")
-- EXECUTION TIME:
0.230972
-- ERROR:
  File "/home/codebench/codes/1674/1872/main.py", line 18
    elif(y>0)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:28:57) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo x")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0)
	   print("Q1")
-- ERROR:
File "XXXX", line 18
    elif(y>0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:29:07) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo x")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
	   print("Q1")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:29:34) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo x")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
	   print("Q1")
-- EXECUTION TIME:
0.207503
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:29:42) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo x")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
	   print("Q1")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:30:32) 
-- CODE:
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
	   print("Q1")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:30:46) 
-- CODE:
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
	   print("Q1")
-- EXECUTION TIME:
0.193499
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
